updated tech deck with creative course data

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "partnership-tracker",
-  "homepage": "https://tyjay00.github.io/Creative-Economy/",
+  "homepage": "https://ce.tyrone.studio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
